Fixed icons on mobile and changed wording

--- a/src/app/skills/skills.component.scss
+++ b/src/app/skills/skills.component.scss
@@ -33,15 +33,21 @@
             width: 60px;
             margin: 5px 20px;
             color: var(--green);
-            @media screen and (max-width: 500px) { 
-                font-size: 30px;
-                margin: 5px 10px;
-            }
         }
         img {
             width: 50px;
             height: 50px;
             pointer-events: none;
+        }
+        @media screen and (max-width: 500px) { 
+            .icon {
+                font-size: 30px;
+                margin: 5px 10px;
+            }
+            img {
+                width: 42px;
+                height: 42px;
+            }
         }
     }
 }
